--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Saaketh Koundinya / Saaketh"
+title                    : "Saaketh Koundinya | Computer Vision Research Fellow"
 title_separator          : "-"
 name                     : &name "Saaketh Koundinya"
 description              : &description "personal description"
-url                      : https://saakethkoundinya.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://saaketh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "tommarvoloriddle.github.io"
+repository               : "saaketh.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Saaketh"
   avatar           : "profile.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
