--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Saaketh Koundinya | Computer Vision Research Fellow"
 title_separator          : "-"
 name                     : &name "Saaketh Koundinya"
 description              : &description "personal description"
-url                      : https://saaketh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://tommarvoloriddle.github.io/saaketh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "saaketh.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
