--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,7 @@ analytics:
 author:
   name             : "Saaketh Koundinya"
   avatar           : "1C6A1473.jpg"
-  bio              : "Research Fellow @ SAP Labs - Computer Vision 
-                      Full-stack Developer @ SAP Labs
-                      Competetive Coding | Problem Solving
-                      "
+  bio              : "Research Fellow @ SAP Labs - Computer Vision \n Full-stack Developer @ SAP Labs \n Competetive Coding | Problem Solving"
   location         : "Location"
   employer         : "SAP Labs"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
