--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Research Fellow @ SAP Labs - Computer Vision \n Full-stack Developer @ SAP Labs \n Competetive Coding | Problem Solving"
   location         : "Location"
   employer         : "SAP Labs"
-  email            : "three2saki@gmail.com
+  email            : "three2saki@gmail.com"
   github           : "tommarvoloriddle"
 
 
