--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Saaketh Koundinya"
   avatar           : "1C6A1473.jpg"
-  bio              : "Research Fellow @ SAP Labs - Computer Vision \n Full-stack Developer @ SAP Labs \n Competetive Coding | Problem Solving"
-  location         : "Location"
+  bio              : "Research Fellow - Computer Vision | Full-stack Developer | Competetive Coding | Problem Solving"
+  location         : "Hyderabad | India"
   employer         : "SAP Labs"
   email            : "three2saki@gmail.com"
   github           : "tommarvoloriddle"
