--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Saaketh Koundinya | Computer Vision Researcher"
+title                    : "Saaketh Koundinya | Research Fellow"
 title_separator          : "-"
 name                     : &name "Saaketh Koundinya"
 description              : &description "personal description"
