--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,12 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "CV/Resume"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
