--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Saaketh Koundinya"
-  avatar           : "1C6A1473.jpg"
+  avatar           : "saaketh.png"
   bio              : "Research Fellow - Computer Vision | Full-stack Developer | Competetive Coding | Problem Solving"
   location         : "Hyderabad | India"
   employer         : "SAP Labs"
