--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ author:
   name             : "Saaketh Koundinya"
   avatar           : "saaketh.png"
   bio              : "Research Fellow - Computer Vision | Full-stack Developer | Competetive Coding | Problem Solving"
-  location         : "Hyderabad | India"
-  employer         : "SAP Labs"
-  email            : "three2saki@gmail.com"
+  location         : "New York | NY"
+  employer         : "NYU"
+  email            : "sg7729@nyu.edu"
   github           : "tommarvoloriddle"
 
 
